fix: mobile row gap media

--- a/static/style.css
+++ b/static/style.css
@@ -128,7 +128,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     column-gap: 1.6rem;
-    row-gap: 0;
+    row-gap: 1rem;
     padding: 1.5rem 1rem;
     padding-top: 0;
     color: var(--white);
